<resources>
    <string name="app_name">RoadrunnerGrocery</string>
    <string name="products">Products</string>
    <string name="promotions">Promotions</string>
    <string name="promo_text_placeholder">Promotion description here</string>
    <string name="frozen">Frozen</string>
    <string name="snacks">Snacks</string>
    <string name="meat">Meat</string>
    <string name="produce">Produce</string>
    <string name="see_more">See More</string>
    <string name="checkout">Checkout</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">REGISTER</string>
    <string name="already_registered">Already Registered?</string>
    <string name="asGuest">Continue as Guest</string>
    <string name="warning_register">Try another username or Register</string>
    <string name="warn_user_exists">Error: Username taken.Try another.</string>
    <string name="warn_login_incorrect">Email or password is incorrect</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="warn_pass_incorrect">Passwords do not match</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="streetAddress">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="aptNum">Apt. No.</string>
    <string name="zipCode">Zip Code</string>
    <string name="cardNumber">Card Number</string>
    <string name="update">UPDATE</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="promotions">Promotions</string>
    <string name="promo_text_placeholder">Promotion description here</string>
    <string name="frozen">Frozen</string>
    <string name="snacks">Snacks</string>
    <string name="meat">Meat</string>
    <string name="produce">Produce</string>
    <string name="see_more">See More</string>
    <string name="checkout">Checkout</string>
</resources>
