<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"

        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameRText"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            android:background="#ffffff"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordRText"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="#ffffff"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="#ffffff"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/cardNumber"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="#ffffff"
            android:hint="@string/cardNumber"/>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/streetAddress"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/streetAddress"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/cityName"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/city" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/state"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/state" />

            <EditText
                android:id="@+id/zipCode"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/zipCode" />

            <EditText
                android:id="@+id/aptNum"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/aptNum" />
        </LinearLayout>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"

            android:background="#f15a22"
            android:text="@string/update"
            android:textColor="#ffffff" />

    </LinearLayout>
</LinearLayout>