<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    >


    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="150dp"
            android:background="#ffffff"
            android:hint="@string/username"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"

        android:background="#f15a22"
        android:text="@string/login"
        android:textColor="#ffffff" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/not_registeredText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            android:textColor="#0c2340" />

        <TextView
            android:id="@+id/regText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textColor="#f15a22"
            android:textStyle="bold" />


    </LinearLayout>
    <TextView
        android:id="@+id/asGuestText"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:text="@string/asGuest"
        android:textColor="#f15a22"
        android:textStyle="bold" />

</LinearLayout>