<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameRText"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="150dp"
            android:background="#ffffff"
            android:hint="@string/username"
            android:inputType="text"/>

        <EditText
            android:id="@+id/passwordRText"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/registerRButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"

        android:background="#f15a22"
        android:text="@string/register"
        android:textColor="#ffffff" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/not_registeredRText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:text="@string/already_registered"
            android:textColor="#0c2430" />
        <TextView
            android:id="@+id/loginRText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/login"
            android:textColor="#f15a22"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/asGuestText"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/asGuest"
        android:textColor="#f15a22"
        android:textStyle="bold" />

</LinearLayout>